# quick-color-convert

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
quick_color_convert/: __init__.py  core.py
tests/: test_quick_color_convert.py
